# nr_burst_finder

./: COPYING  README.rst  setup.cfg
nr_burst_finder/: nr_burst_finder.py
