[metadata]
name = nr_burst_finder
version = attr: nr_burst_finder.__version__
author = Michal Krugly
author_email = mickrugly@gmail.com
description = Example module for data bursts detection
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = [COPYING]
platform = any
keywords = 3gpp, New Radio, 5G, data bursts, data analytics
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: Apache License, Version 2.0
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Internet
  Topic :: Communications :: Telephony
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
  setuptools >=39.2.0
install_requires =
  numpy
  scipy
